--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@types/react-dom": "^16.9.10",
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
+    "frazy-parser": "^2.4.0",
     "ionicons": "^5.4.0",
+    "mitt": "^2.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
