--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
 		"@types/react-router-dom": "^5.1.7",
 		"frazy-parser": "^2.6.1",
 		"ionicons": "^5.4.0",
+		"mobx": "^6.3.2",
+		"mobx-react": "^7.2.0",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"react-router": "^5.2.0",
